--- a/docs/5W2H.md
+++ b/docs/5W2H.md
@@ -8,13 +8,13 @@ Uma aplicação para sugerir rotas para motoristas, baseada na navegação por s
 ## Why
 
 <p align="justify"> 
-Encontrar melhor rota para o motorista de acordo com os detalhes no percurso, assim diminuir o tempo para chegar ao local desejado.
+Encontrar melhor rota para o motorista de acordo com os detalhes no percurso, assim diminuindo o tempo para chegar ao local desejado.
 </p>
 
 ## Where 
 
 <p align="justify"> 
-Uma aplicação mobile, permitindo atualizações em tempo real sobre eventos nas rotas.
+Uma aplicação mobile disponível para IOS, Android, Windows Phone e Blackberry, permitindo atualizações em tempo real sobre eventos nas rotas, como congestionamentos, blitz ou desvios.
 </p>
 
 ## When
@@ -26,11 +26,11 @@ Foi desenvolvida pela start-up Waze Mobile de Israel em 2008, empresa que foi ad
 ## Who
 
 <p align="justify"> 
-Waze Mobile Ltd. Israel. Amir Shinar, Edhud Shabtai e Uri Levine
+Waze Mobile Ltd. Israel. Amir Shinar, Edhud Shabtai e Uri Levine.
 </p>
 
 ## How
-
+O waze utiliza o banco de dados do Google Maps para calcular a melhor rota possível para o usuário, e usa o feedback dos próprios usuários em tempo real para deduzir as condições do trajeto (trânsito bom, congestionado, pista molhada, etc).
 <p align="justify"> 
 
 </p>
@@ -38,5 +38,5 @@ Waze Mobile Ltd. Israel. Amir Shinar, Edhud Shabtai e Uri Levine
 ## How much 
 
 <p align="justify"> 
-O Google comprou o Waze por US $ 966 milhões em junho de 2013 para adicionar dados sociais ao seu negócio de mapeamento.
+O Google comprou o Waze por US $ 966 milhões em junho de 2013 para adicionar dados sociais ao seu negócio de mapeamento. O Waze está disponível gratuitamente em várias lojas virtuais como a App Store e a Google Play.
 </p>
