--- a/docs/5W2H.md
+++ b/docs/5W2H.md
@@ -1,41 +1,41 @@
 # 5W2H
 
-## What
+## What (O que será feito)
 
 <p align="justify"> 
 Uma aplicação para sugerir rotas para motoristas, baseada na navegação por satélite e no alerta de possíveis eventos encontrados nesta rota.</p>
 
-## Why
+## Why (Por que será feito)
 
 <p align="justify"> 
 Encontrar melhor rota para o motorista de acordo com os detalhes no percurso, assim diminuindo o tempo para chegar ao local desejado.
 </p>
 
-## Where 
+## Where (Onde será feito)
 
 <p align="justify"> 
 Uma aplicação mobile disponível para IOS, Android, Windows Phone e Blackberry, permitindo atualizações em tempo real sobre eventos nas rotas, como congestionamentos, blitz ou desvios.
 </p>
 
-## When
+## When (Quando será feito)
 
 <p align="justify"> 
 Foi desenvolvida pela start-up Waze Mobile de Israel em 2008, empresa que foi adquirida pela Google em 2013.
 </p>
 
-## Who
+## Who (Por quem será feito)
 
 <p align="justify"> 
 Waze Mobile Ltd. Israel. Amir Shinar, Edhud Shabtai e Uri Levine.
 </p>
 
-## How
+## How (Como será feito)
 O waze utiliza o banco de dados do Google Maps para calcular a melhor rota possível para o usuário, e usa o feedback dos próprios usuários em tempo real para deduzir as condições do trajeto (trânsito bom, congestionado, pista molhada, etc).
 <p align="justify"> 
 
 </p>
 
-## How much 
+## How much (Quanto custará fazer)
 
 <p align="justify"> 
 O Google comprou o Waze por US $ 966 milhões em junho de 2013 para adicionar dados sociais ao seu negócio de mapeamento. O Waze está disponível gratuitamente em várias lojas virtuais como a App Store e a Google Play.
