Ajustado SW2H em referencias e ratreabilidade.
Signed-off-by: João Soares <jpcirqueira81@gmail.com>

--- a/docs/5W2H.md
+++ b/docs/5W2H.md
@@ -1,48 +1,53 @@
 # 5W2H
 
-## What (O que será feito)
+## 1.What (O que será feito)
 
 <p align="justify"> 
 Uma aplicação para sugerir rotas para motoristas, baseada na navegação por satélite e no alerta de possíveis eventos encontrados nesta rota.</p>
 
-## Why (Por que será feito)
+## 2.Why (Por que será feito)
 
 <p align="justify"> 
 Encontrar melhor rota para o motorista de acordo com os detalhes no percurso, assim diminuindo o tempo para chegar ao local desejado.
 </p>
 
-## Where (Onde será feito)
+## 3.Where (Onde será feito)
 
 <p align="justify"> 
 Uma aplicação mobile disponível para IOS, Android, Windows Phone e Blackberry, permitindo atualizações em tempo real sobre eventos nas rotas, como congestionamentos, blitz ou desvios.
 </p>
 
-## When (Quando será feito)
+## 4.When (Quando será feito)
 
 <p align="justify"> 
 Foi desenvolvida pela start-up Waze Mobile de Israel em 2008, empresa que foi adquirida pela Google em 2013.
 </p>
 
-## Who (Por quem será feito)
+## 5.Who (Por quem será feito)
 
 <p align="justify"> 
 Waze Mobile Ltd. Israel. Amir Shinar, Edhud Shabtai e Uri Levine.
 </p>
 
-## How (Como será feito)
+## 6.How (Como será feito)
 O waze utiliza o banco de dados do Google Maps para calcular a melhor rota possível para o usuário, e usa o feedback dos próprios usuários em tempo real para deduzir as condições do trajeto (trânsito bom, congestionado, pista molhada, etc).
 <p align="justify"> 
 
 </p>
 
-## How much (Quanto custará fazer)
+## 7.How much (Quanto custará fazer)
 
 <p align="justify"> 
 O Google comprou o Waze por US $ 966 milhões em junho de 2013 para adicionar dados sociais ao seu negócio de mapeamento. O Waze está disponível gratuitamente em várias lojas virtuais como a App Store e a Google Play.
 </p>
 
+## 8. referencia
+
+> O que é o 5W2H e como ele é utilizado, em: http://www.sobreadministracao.com/o-que-e-o-5w2h-e-como-ele-e-utilizado/
+
+> 5W2H: o que significa, para que serve, em: https://klickpages.com.br/blog/5w2h-o-que-significa/
 ## Histórico de Versões
 
 | Data | Versão | Descrição | Autor(es) |
 |:--:|:--:|:--:|:--:|
-|09/10/19|1.0| -- |--|
+|09/10/19|1.0| Feito SW2H |João Pedro, Lucas Alexandre|
