--- a/docs/5W2H.md
+++ b/docs/5W2H.md
@@ -43,9 +43,9 @@ O Google comprou o Waze por US $ 966 milhões em junho de 2013 para adicionar da
 
 ## 8. referencia
 
-> O que é o 5W2H e como ele é utilizado, em: http://www.sobreadministracao.com/o-que-e-o-5w2h-e-como-ele-e-utilizado/
+> O que é o 5W2H e como ele é utilizado. Disponível em: http://www.sobreadministracao.com/o-que-e-o-5w2h-e-como-ele-e-utilizado/
 
-> 5W2H: o que significa, para que serve, em: https://klickpages.com.br/blog/5w2h-o-que-significa/
+> 5W2H: o que significa, para que serve. Disponível em: https://klickpages.com.br/blog/5w2h-o-que-significa/
 ## Histórico de Versões
 
 | Data | Versão | Descrição | Autor(es) |
